--- a/client/package.json
+++ b/client/package.json
@@ -1,24 +1,35 @@
 {
   "name": "client",
   "version": "0.0.0",
-  "private": true,
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test:unit": "vitest"
+    "lint": "eslint . --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "axios": "^1.7.3",
-    "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "@mdi/font": "7.4.47",
+    "axios": "^1.7.4",
+    "core-js": "^3.37.1",
+    "roboto-fontface": "*",
+    "vue": "^3.4.31",
+    "vuetify": "^3.6.11"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^5.1.2",
-    "@vue/test-utils": "^2.4.6",
-    "jsdom": "^24.1.0",
-    "vite": "^5.3.5",
-    "vitest": "^1.6.0"
+    "@vitejs/plugin-vue": "^5.0.5",
+    "eslint": "^8.57.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.4.0",
+    "eslint-plugin-vue": "^9.27.0",
+    "sass": "1.77.6",
+    "unplugin-fonts": "^1.1.1",
+    "unplugin-vue-components": "^0.27.2",
+    "unplugin-vue-router": "^0.10.0",
+    "vite": "^5.3.3",
+    "vite-plugin-vuetify": "^2.0.3",
+    "vue-router": "^4.4.0"
   }
 }
