Search engine prototype

--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.37.1",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
+    "vue-search-input": "^1.1.16",
     "vuetify": "^3.6.11"
   },
   "devDependencies": {
