--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@mdi/font": "7.4.47",
     "axios": "^1.7.4",
     "core-js": "^3.37.1",
+    "fabric": "^6.5.0",
     "roboto-fontface": "*",
     "vue": "^3.4.31",
     "vue-search-input": "^1.1.16",
